[commit] CQRS building